[gd_scene load_steps=2 format=3 uid="uid://host_game"]

[ext_resource type="Script" path="res://scripts/ui/host_game.gd" id="1"]

[node name="HostGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.07, 0.12, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -200.0
offset_right = 220.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 14

[node name="TitleLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Host Game"
horizontal_alignment = 1

[node name="Sep1" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Player Name"

[node name="NameEdit" type="LineEdit" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 36)
text = "Host"
placeholder_text = "Enter your name"

[node name="PortLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Port"

[node name="PortSpinBox" type="SpinBox" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1024.0
max_value = 65535.0
value = 58600.0

[node name="ColorLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Player Color"

[node name="ColorPicker" type="ColorPickerButton" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 36)
color = Color(0.2, 0.4, 1.0, 1)

[node name="Spacer" type="Control" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="HostButton" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(280, 48)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "HOST GAME"

[node name="BackButton" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(280, 48)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "BACK"

[node name="StatusLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.65, 0.8, 1)
text = ""
horizontal_alignment = 1
autowrap_mode = 2
